<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/search_messages_action"
            android:icon="@drawable/search_icon"
            android:title="@string/search"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
            android:id="@id/settings_graph"
            android:title="@string/settings"
            app:showAsAction="never"/>

    <item
            android:id="@+id/menu_sign_out"
            android:title="@string/sign_out"
            app:showAsAction="never"/>
</menu>